# GeetestVerify

./: html_temp.py  main.py  pyproject.toml  requirements.txt
public/templates/: example.html  login_email.html  relic_property.html  tasks1.html  tasks2.html  tasks3.html  tasks4.html  webapp.html
route/: login.py  templates.py
