[project]
name = "geetestverify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "genshin",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "rsa>=4.9.1",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
genshin = { git = "https://github.com/seriaati/genshin.py" }

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
